--- a/views/partials/admin-header.ejs
+++ b/views/partials/admin-header.ejs
@@ -163,7 +163,7 @@
                                     <a href="#" class="btn btn-default btn-flat">Profile</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="#" class="btn btn-default btn-flat">Sign out</a>
+                                    <a href="#" class="btn btn-default btn-flat" id="sign-out">Sign out</a>
                                 </div>
                             </li>
                         </ul>
