--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,6 +1,5 @@
-extends layouts/main
-
-block content
-  h1= message
-  h2= error.status
-  pre #{error.stack}
+<div class="content">
+  <h1><%= message %></h1>
+  <h2><%= error.status %></h2>
+  <pre><%= error.stack %></pre>
+</div>
