--- a/views/partials/admin-footer.ejs
+++ b/views/partials/admin-footer.ejs
@@ -83,5 +83,77 @@
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="/dist/js/app.min.js"></script>
 <script src="/dist/js/function.js"></script>
+<script>
+    function initMap() {
+        var map = new google.maps.Map(document.getElementById('map'), {
+            center: {lat: -33.8688, lng: 151.2195},
+            zoom: 13
+        });
+
+        var input = document.getElementById('pac-input');
+
+        var autocomplete = new google.maps.places.Autocomplete(input);
+        autocomplete.bindTo('bounds', map);
+
+        map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
+
+        var infowindow = new google.maps.InfoWindow();
+        var infowindowContent = document.getElementById('infowindow-content');
+        infowindow.setContent(infowindowContent);
+        var marker = new google.maps.Marker({
+            map: map
+        });
+        marker.addListener('click', function () {
+            infowindow.open(map, marker);
+        });
+
+        autocomplete.addListener('place_changed', function () {
+            infowindow.close();
+            var place = autocomplete.getPlace();
+            if (!place.geometry) {
+                return;
+            }
+
+            if (place.geometry.viewport) {
+                map.fitBounds(place.geometry.viewport);
+            } else {
+                map.setCenter(place.geometry.location);
+                map.setZoom(20);
+            }
+
+            // Set the position of the marker using the place ID and location.
+//            marker.setPlace({
+//                placeId: place.place_id,
+//                location: place.geometry.location
+//            });
+//            marker.setVisible(true);
+
+            infowindowContent.children['place-name'].textContent = place.name;
+            infowindowContent.children['place-id'].textContent = place.place_id;
+            infowindowContent.children['place-address'].textContent =
+                place.formatted_address;
+            infowindow.open(map, marker);
+        });
+        google.maps.event.addListener(map, 'click', function(event) {
+            placeMarker(event.latLng);
+            var json = JSON.stringify(event.latLng);
+
+
+            console.log('event+', json);
+            $('#location').val(JSON.stringify(event.latLng));
+            var _url = 'http://maps.googleapis.com/maps/api/geocode/json?latlng=44.4647452,7.3553838&sensor=true';
+            $.get()
+        });
+
+        function placeMarker(location) {
+            var marker = new google.maps.Marker({
+                position: location,
+                map: map
+            });
+        }
+    }
+</script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4MDQL1d2dTKJQBq-alxGtbE8mCu-CLDk&libraries=places&callback=initMap"
+                async defer></script>
 </body>
 </html>
