--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -39,6 +39,17 @@
                 <li><a href="/admin/page/list">All pages</a></li>
                 <li><a href="/admin/page/create">Create a page</a></li>
             </ul>
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Items</span>
+                <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                </span>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="/admin/item/list">All items</a></li>
+                <li><a href="/admin/item/create">Create an item</a></li>
+            </ul>
         </li>
 
     </ul>
