--- a/views/partials/admin-header.ejs
+++ b/views/partials/admin-header.ejs
@@ -20,7 +20,6 @@
         #map {
             height: 400px;
         }
-
         /* Optional: Makes the sample page fill the window. */
         html, body {
             height: 100%;
@@ -56,7 +55,9 @@
         #map #infowindow-content {
             display: inline;
         }
-
+        #address {
+            min-width: 500px;
+        }
     </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
