--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -39,6 +39,8 @@
                 <li><a href="/admin/page/list">All pages</a></li>
                 <li><a href="/admin/page/create">Create a page</a></li>
             </ul>
+        </li>
+        <li class="treeview">
             <a href="#">
                 <i class="fa fa-link"></i>
                 <span>Items</span>
@@ -50,6 +52,7 @@
                 <li><a href="/admin/item/list">All items</a></li>
                 <li><a href="/admin/item/create">Create an item</a></li>
             </ul>
+
         </li>
 
     </ul>
