file upload via ajax - not finished yet

--- a/views/partials/admin-footer.ejs
+++ b/views/partials/admin-footer.ejs
@@ -83,7 +83,7 @@
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="/dist/js/app.min.js"></script>
 <script src="/dist/js/function.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4MDQL1d2dTKJQBq-alxGtbE8mCu-CLDk&libraries=places&callback=initMap"
-        async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4MDQL1d2dTKJQBq-alxGtbE8mCu-CLDk&libraries=places&callback=initMap" async defer></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery.form/3.51/jquery.form.min.js"></script>
 </body>
 </html>
