--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -13,6 +13,7 @@
                         <% } %>
 
                         <form action="<%= data.formAction %>" method="<%= data.formMethod %>" class="clearfix">
+                            <input id="pics" name="pics" value="<%= item.pics %>" hidden>
                             <h4>Address</h4>
                             <div class="row">
                                 <div class="col-lg-10">
@@ -77,13 +78,39 @@
                                     </div>
                                 </div>
                             </div>
-                            <h4>Images</h4>
+                        </form>
+                        <form id="file-upload" action="/admin/img" method="post" class="clearfix" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="col-lg-12">
-
+                                    <h4>Images</h4>
+                                    <div id="status"></div>
+                                    <div class="row">
+                                        <div class="form-group input-group-lg col-lg-6">
+                                            <input type="file" name="img" id="img">
+                                        </div>
+                                        <div class="form-group input-group-lg col-lg-6">
+                                            <button id="upload" class="btn btn-lg btn-success">Upload</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </form>
+                        <div class="row">
+                            <div class="col-lg-12" id="gallery">
+                                <h4>Gallery</h4>
+                                <% if (pics) { %>
+                                <% pics.forEach(function(pic) { %>
+                                <div class="col-lg-6">
+                                    <img class="img-responsive" src="<%= pic %>" alt="Photo">
+                                </div>
+                                <% }); %>
+                                <% } else { %>
+                                <div class="col-lg-6">
+                                    <p>No photos yet.</p>
+                                </div>
+                                <% } %>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
