item create action added

--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -105,7 +105,7 @@
                                 </div>
                                 <% }); %>
                                 <% } else { %>
-                                <div class="col-lg-6">
+                                <div class="col-lg-6" id="empty-img">
                                     <p>No photos yet.</p>
                                 </div>
                                 <% } %>
