front page: html some rubbish removed, template not finished

--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -101,7 +101,7 @@
                                 <% if (pics) { %>
                                 <% pics.forEach(function(pic) { %>
                                 <div class="col-lg-6">
-                                    <img class="img-responsive" src="<%= pic %>" alt="Photo">
+                                    <img class="img-responsive" src="/img/<%= pic %>" alt="Photo">
                                 </div>
                                 <% }); %>
                                 <% } else { %>
