beds & bath replaced with rooms, click on marker displays info about the selected item

--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -51,11 +51,7 @@
                                 <div class="col-lg-4">
                                     <div class="form-group input-group-lg">
                                         <label>Beds</label>
-                                        <input type="text" name="beds" placeholder="beds" value="<%= item.beds %>">
-                                    </div>
-                                    <div class="form-group input-group-lg">
-                                        <label>Bath</label>
-                                        <input type="text" name="bath" placeholder="bath" value="<%= item.bath %>">
+                                        <input type="text" name="rooms" placeholder="rooms" value="<%= item.rooms %>">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
