--- a/views/partials/admin-header.ejs
+++ b/views/partials/admin-header.ejs
@@ -58,6 +58,9 @@
         #address {
             min-width: 500px;
         }
+        #district {
+            min-width: 300px;
+        }
     </style>
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
