--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -7,16 +7,14 @@
                 <div class="panel panel-default">
                     <div class="panel-heading"><%= data.formTitle %></div>
                     <div class="panel-body">
-
                         <% if (message) { %>
                             <div class="alert alert-danger"><%= message %></div>
                         <% } %>
-
                         <form action="<%= data.formAction %>" method="<%= data.formMethod %>" class="clearfix">
                             <input id="pics" name="pics" value="<%= item.pics %>" hidden>
                             <div class="row">
                                 <div class="col-lg-10">
-                                    <h4>Address</h4>
+                                    <h4>Адрес</h4>
                                     <input id="address" name="address" placeholder="address" value="<%= item.address %>">
                                 </div>
                                 <div class="col-lg-2">
@@ -27,11 +25,11 @@
                             </div>
                             <div class="row">
                                 <div class="col-lg-10">
-                                    <h4>District</h4>
+                                    <h4>Район</h4>
                                     <input id="district" name="district" placeholder="district" value="<%= item.district %>">
                                 </div>
                             </div>
-                            <h4>Coordinates</h4>
+                            <h4>Координаты</h4>
                             <div class="row">
                                 <div class="col-lg-6">
                                     <label>lat</label>
@@ -42,25 +40,25 @@
                                     <input type="text" id="lng" name="lng" placeholder="lng" value="<%= item.coordinates.lng %>">
                                 </div>
                             </div>
-                            <h4>Params</h4>
+                            <h4>Параметры</h4>
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="form-group input-group-lg">
-                                        <label for="code">Code</label>
+                                        <label for="code">Код</label>
                                         <input type="text" name="code" placeholder="code" value="<%= item.code %>">
                                     </div>
                                     <div class="form-group input-group-lg">
-                                        <label>Price</label>
+                                        <label>Цена</label>
                                         <input type="text" name="price" placeholder="price" value="<%= item.price %>">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group input-group-lg">
-                                        <label>Rooms</label>
+                                        <label>Комнат</label>
                                         <input type="text" name="rooms" placeholder="rooms" value="<%= item.rooms %>">
                                     </div>
                                     <div class="form-group input-group-lg">
-                                        <label>Type</label>
+                                        <label>Тип</label>
                                         <select name="type">
                                             <% data.itemTypes.forEach(function(itemType) { %>
                                                 <% var selected = (item && itemType.type == item.type) ? 'selected' : ''  %>
@@ -73,16 +71,16 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group input-group-lg">
-                                        <label>Sqft</label>
+                                        <label>Площадь</label>
                                         <input type="text" name="sqft" placeholder="sqft" value="<%= item.sqft %>">
                                     </div>
                                 </div>
                             </div>
-                            <h4>Location</h4>
+                            <h4>Расположение</h4>
                             <div class="row">
                                 <div class="col-lg-12">
                                     <input id="pac-input" class="controls" type="text"
-                                           placeholder="Enter a location">
+                                           placeholder="Введите адрес">
                                     <div id="map"></div>
                                     <div id="infowindow-content">
                                         <span id="place-name" class="title"></span><br>
@@ -95,14 +93,14 @@
                         <form id="file-upload" action="/admin/img" method="post" class="clearfix" enctype="multipart/form-data">
                             <div class="row">
                                 <div class="col-lg-12">
-                                    <h4>Images</h4>
+                                    <h4>Фото</h4>
                                     <div id="status"></div>
                                     <div class="row">
                                         <div class="form-group input-group-lg col-lg-6">
                                             <input type="file" name="img" id="img">
                                         </div>
                                         <div class="form-group input-group-lg col-lg-6">
-                                            <button id="upload" class="btn btn-lg btn-success">Upload</button>
+                                            <button id="upload" class="btn btn-lg btn-success">Загрузить</button>
                                         </div>
                                     </div>
                                 </div>
@@ -110,7 +108,7 @@
                         </form>
                         <div class="row">
                             <div class="col-lg-12" id="gallery">
-                                <h4>Gallery</h4>
+                                <h4>Фото</h4>
                                 <% if (pics) { %>
                                 <% pics.forEach(function(pic) { %>
                                     <div class="col-lg-6">
@@ -119,7 +117,7 @@
                                 <% }); %>
                                 <% } else { %>
                                     <div class="col-lg-6" id="empty-img">
-                                        <p>No photos yet.</p>
+                                        <p>Нет фоток</p>
                                     </div>
                                 <% } %>
                             </div>
