description field for the item was added

--- a/views/pages/admin/item-form.ejs
+++ b/views/pages/admin/item-form.ejs
@@ -76,6 +76,12 @@
                                     </div>
                                 </div>
                             </div>
+                            <h4>Описание</h4>
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <textarea class="form-control" name="description" rows="7" placeholder="Описание"><%= item.description %></textarea>
+                                </div>
+                            </div>
                             <h4>Расположение</h4>
                             <div class="row">
                                 <div class="col-lg-12">
