--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -52,7 +52,19 @@
                 <li><a href="/admin/item/list">All items</a></li>
                 <li><a href="/admin/item/create">Create an item</a></li>
             </ul>
-
+        </li>
+        <li class="treeview">
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Agents</span>
+                <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                </span>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="/admin/agent/list">All agents</a></li>
+                <li><a href="/admin/agent/create">Add agent</a></li>
+            </ul>
         </li>
 
     </ul>
