Messages implemented: MessageModel, view with list of messages

--- a/views/partials/admin-menu.ejs
+++ b/views/partials/admin-menu.ejs
@@ -66,7 +66,18 @@
                 <li><a href="/admin/agent/create">Add agent</a></li>
             </ul>
         </li>
-
+        <li class="treeview">
+            <a href="#">
+                <i class="fa fa-link"></i>
+                <span>Messages</span>
+                <span class="pull-right-container">
+                    <i class="fa fa-angle-left pull-right"></i>
+                </span>
+            </a>
+            <ul class="treeview-menu">
+                <li><a href="/admin/message/list">List</a></li>
+            </ul>
+        </li>
     </ul>
     <!-- /.sidebar-menu -->
 </section>
