Message: read/unread functionality implemented

--- a/views/pages/admin/message-form.ejs
+++ b/views/pages/admin/message-form.ejs
@@ -56,5 +56,13 @@
         </div>
     </div>
 </div>
+<script>
+    function markMessageAsRead() {
+        $.post('/admin/message/<%= messageData._id %>');
+    }
+    setTimeout(function () {
+        markMessageAsRead();
+    });
+</script>
 
 <% include ../../partials/admin-footer.ejs %>
